changes to sales model
