# api/static/openapi.json
@@ -11,7 +11,7 @@
       "description": "Development API server"
     },
     {
-      "url": "https://store-manager-ap1.herokuapp.com/",
+      "url": "https://store-manager-ap1.herokuapp.com/api/v2",
       "description": "Production API server"
     }
   ],
@@ -315,7 +315,7 @@
         }
       }
     },
-    "/sales/{user_id}": {
+    "/sales/{user_name}": {
       "get": {
         "tags": [
           "Sales"
@@ -323,14 +323,12 @@
         "summary": "Returns a sales specific to an attendant",
         "parameters": [
           {
-            "name": "user_id",
+            "name": "user_name",
             "in": "path",
             "required": true,
             "description": "Get sales specific to an attendant",
             "schema": {
-              "type": "integer",
-              "format": "int64",
-              "minimum": 1
+              "type": "string"
             }
           }
         ],
@@ -344,7 +342,7 @@
             "description": "sales found"
           },
           "404": {
-            "description": "Sales with related to id not been found"
+            "description": "Sales with related to user not been found"
           }
         }
       }
@@ -525,9 +523,9 @@
             "type": "integer",
             "example" : 6
           },
-          "user_id": {
-            "type": "integer",
-            "example" : 2
+          "user_name": {
+            "type": "string",
+            "example" : "victoria"
           }
         }
       }
