# api/views.py
@@ -112,7 +112,7 @@ class ProductsView(MethodView):
         if valprod:
             return valprod
         
-        database.modify_product(prod_cat, prod_price, prod_qty, prod_meas, product_id)
+        database.modify_product(category=prod_cat, unit_price=prod_price, quantity=prod_qty, measure=prod_meas, product_id=product_id)
         return jsonify({"Success": "product has been modified"}), 200
     
     @jwt_required
@@ -242,21 +242,21 @@ class SalesView(MethodView):
             return jsonify({"message": "You are not authorized"}), 401
         
         data = request.get_json()
-        user_id = int(data.get('user_id'))
+        user_name = data.get('user_name')
         quantity = int(data.get('quantity'))
         product_id = int(data.get('product_id'))
 
         # check empty fields
-        valsale=validate_sales(user_id=user_id, product_id=product_id, quantity=quantity)
+        valsale=validate_sales(user_name=user_name, product_id=product_id, quantity=quantity)
 
         if valsale:
             return valsale
                 
         # get quantity
-        getQty = int(database.getQuantity(product_id))
+        getQty = int(database.getoneProduct(product_id)["quantity"])
 
         # get price
-        getPrice = int(database.getPrice(product_id))
+        getPrice = int(database.getoneProduct(product_id)["unit_price"])
 
         #check if quantity is more than quantity in products table
         if quantity > database.getoneProduct(product_id)["quantity"]:
@@ -268,16 +268,19 @@ class SalesView(MethodView):
         # new qty
         newqty = getQty - quantity
 
-        # insert into sales table
-        obj_sales = Sales(user_id, product_id, quantity, total)
-        database.insert_data_sales(obj_sales)
+        #get the product
+        product = database.getoneProduct(product_id)
 
         #update products table
-        database.updateProductqty(newqty, product_id)             
+        database.modify_product(category=product["category"], unit_price=product["unit_price"], quantity=newqty, measure=product["measure"],product_id= product_id)             
+
+        # insert into sales table
+        obj_sales = Sales(user_name, product_id, quantity, total)
+        database.insert_data_sales(obj_sales)
         return jsonify({"Success": "sale has been added"}), 201
 
     @jwt_required
-    def get(self, user_id = None):
+    def get(self, user_name = None):
         """get sale orders"""
         current_user = get_jwt_identity()
         jti = get_raw_jwt()['jti']
@@ -286,15 +289,15 @@ class SalesView(MethodView):
         if revoked:
             return jsonify({'msg': 'token already revoked'}), 401
 
-        if current_user == 'admin' or current_user == 'attendant':
-            if user_id:
-                saleorder = database.get_one_sale(user_id)
-                if not saleorder:
-                    return jsonify({'message': "sale has not been found"}), 404
-                return jsonify({'sale': saleorder}), 200
+        # if current_user == 'admin' or current_user == 'attendant':
+        if user_name:
+            saleorder = database.get_one_sale(user_name)
+            if not saleorder:
+                return jsonify({'message': "sale has not been found"}), 404
+            return jsonify({'sale': saleorder}), 200
         
         if current_user == 'admin':
-            if not user_id:
+            if not user_name:
                 saleget = database.getsales()
                 if not saleget:
                     return jsonify({'message': "There are no sales"}), 404
@@ -310,7 +313,7 @@ app.add_url_rule('/api/v2/products/<product_id>',
 app.add_url_rule('/api/v2/sales',
                  view_func=SalesView.as_view('sales_view'),
                  methods=["GET", "POST"])
-app.add_url_rule('/api/v2/sales/<user_id>',
+app.add_url_rule('/api/v2/sales/<user_name>',
                  view_func=SalesView.as_view('sale_view'),
                  methods=["GET"])
 app.add_url_rule('/api/v2/users',
@@ -328,3 +331,4 @@ app.add_url_rule('/api/v2/auth/logout',
 app.add_url_rule('/api/v2/auth/signup',
                  view_func=SignupView.as_view('signup_view'),
                  methods=["POST"])
+                 
